<resources>
    <string name="app_name">VenueKoi</string>
    <string name="get_started">Get started with VenueKoi</string>
    <string name="title_activity_venue">VenueActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <string name="logout">Logout</string>
    <string name="venue_list">Venue List</string>
    <string name="booked_item">Booked Item</string>
    <string name="profile">Profile</string>
    <string name="amenities">Amenities</string>
    <string name="details">Details</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="continue_to_next">Continue to next</string>
    <string name="waiting_for_the_verification_code">Waiting for the verification code</string>
    <string name="enter_verification_code">enter verification code</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="enter_your_address">Enter your address:</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_mobile_number">Please enter your mobile number to receive a verification code</string>
    <string name="_880">+880</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_btn">Continue</string>
    <string name="verification_process">VERIFICATION PROCESS</string>
    <string name="otp_has_been_sent">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">VERIFY</string>
    <string name="tk_100000">Tk. 100000</string>
    <string name="bdt">BDT. : </string>
    <string name="your_name">Your name:</string>
    <string name="your_address">Your address:</string>
    <string name="your_phone">Your phone:</string>
    <string name="check_availability">Check Availability</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="confirm_date">Please pick a Date for booking</string>
    <string name="booking_date">Booking Date:</string>
    <string name="venue_price">Venue Price:</string>
    <string name="venue_name">Venue Name:</string>
    <string name="venue_id">Venue Id:</string>
    <string name="user_id">User Id:</string>
    <string name="category_name">Category Name:</string>
    <string name="show_comment">Show Comment</string>
    <!--<string name="facebook_login">Facebook login</string>
    <string name="facebook_application_id">1236590283207982</string>
    <string name="facebook_login_protocol_scheme">fb1236590283207982</string>-->

</resources>
