<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/whiteText"
    tools:context=".SetUserDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_your_name"
        android:textSize="25sp"
        android:textColor="@color/darkBlueColor"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_your_address"
        android:textSize="25sp"
        android:textColor="@color/darkBlueColor"/>

    <EditText
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/user_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlueColor"
        android:text="@string/save_and_continue"
        android:textColor="@color/whiteText"
        android:textAllCaps="false"/>

</LinearLayout>