<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/your_name"
        android:fontFamily="@font/texgyre"
        android:textSize="20sp"
        android:textColor="@color/darkBlueColor"/>

    <TextView
        android:id="@+id/firebase_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/texgyre"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/texgyre"
        android:text="@string/your_phone"
        android:textSize="20sp"
        android:textColor="@color/darkBlueColor"/>

    <TextView
        android:id="@+id/firebase_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/texgyre"
        android:textSize="20sp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/texgyre"
        android:text="@string/your_address"
        android:textSize="20sp"
        android:textColor="@color/darkBlueColor"/>

    <TextView
        android:id="@+id/firebase_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/texgyre"
        android:layout_marginBottom="20dp"/>

</LinearLayout>