<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VenueDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layoutX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarX"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@color/fui_transparent">

            <ImageView
                android:id="@+id/venue_imageX"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarX"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rating_btnX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_star_rating"
        app:backgroundTint="@color/whiteText"
        app:elevation="6dp"
        app:pressedTranslationZ="1dp"
        app:layout_anchor="@id/appbar_layoutX"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollX"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/venue_nameX"
                        tools:text="Venue name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:fontFamily="@font/texgyre"
                        android:textColor="@color/darkBlueColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </TextView>

                    <LinearLayout
                        android:id="@+id/layout_priceX"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bdt"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:fontFamily="@font/texgyre"
                            android:textColor="@color/blackColor"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/venue_priceX"
                            tools:text="1,00,000"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/texgyre"
                            android:textColor="@color/blackColor"
                            android:layout_weight="9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_locationX"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:srcCompat="@drawable/ic_location"
                            android:layout_weight="1"
                            android:padding="3dp"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/venue_locationX"
                            tools:text="Chittagong"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:fontFamily="@font/texgyre"
                            android:textColor="@color/blackColor"
                            android:layout_weight="9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/venue_availableBtnX"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkBlueColor"
                android:text="@string/check_availability"
                android:fontFamily="@font/texgyre"
                android:textColor="@color/whiteText" />

            <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/rating_barX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="0"
                        android:max="5"
                        android:layout_gravity="center"
                        android:isIndicator="true"/>

                    <Button
                        android:id="@+id/venue_commentX"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/texgyre"
                        android:textColor="@color/whiteText"
                        android:text="@string/show_comment" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/amenities"
                        android:fontFamily="@font/texgyre"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/blackColor"/>

                    <TextView
                        android:id="@+id/venue_detailsX"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:lineSpacingMultiplier="1.5"
                        android:fontFamily="@font/texgyre"
                        android:text="@string/details"
                        android:textColor="@color/blackColor"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>